# TechLog

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: file.cpp  file.h  main.cpp  options.cpp  options.h  parser.cpp  parser.h  reader.h  standardinput.cpp  standardinput.h  version.h.in
